modal close fix, hero reposition, mobile text spacing sizing

--- a/source/stylesheets/_about_contact.scss
+++ b/source/stylesheets/_about_contact.scss
@@ -8,3 +8,6 @@
     margin: 20px 0;
   }
 }
+.button-row.margin-bottom {
+  margin: 20px 0;
+}
